--- a/App/app/locales/en.json
+++ b/App/app/locales/en.json
@@ -19,5 +19,9 @@
     "success": "Success",
     "logged_in": "You are logged in.",
     "invalid_credentials": "Invalid email or password",
-    "registration_failed": "Registration failed."
+    "registration_failed": "Registration failed.",
+    "add_crypto_success_title": "Crypto Added Successfully",
+    "add_crypto_success_message": "The cryptocurrency has been added to your portfolio.",
+    "add_crypto_error_title": "Error Adding Crypto",
+    "add_crypto_error_message": "There was an error adding the cryptocurrency. Please try again later."
 }
