Added styling and internationalisation texts

--- a/App/app/locales/en.json
+++ b/App/app/locales/en.json
@@ -23,5 +23,9 @@
     "add_crypto_success_title": "Crypto Added Successfully",
     "add_crypto_success_message": "The cryptocurrency has been added to your portfolio.",
     "add_crypto_error_title": "Error Adding Crypto",
-    "add_crypto_error_message": "There was an error adding the cryptocurrency. Please try again later."
+    "add_crypto_error_message": "There was an error adding the cryptocurrency. Please try again later.",
+    "delete_crypto_success_title": "Crypto Deleted Successfully",
+    "delete_crypto_success_message": "The cryptocurrency has been deleted from your portfolio.",
+    "delete_crypto_error_title": "Error Deleting Crypto",
+    "delete_crypto_error_message": "There was an error deleting the cryptocurrency. Please try again later."
 }
